--- a/Diagnosis/Controls/Directory/TileItem.xaml
+++ b/Diagnosis/Controls/Directory/TileItem.xaml
@@ -9,9 +9,8 @@
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
-             d:DataContext="{StaticResource symptomVM}"            
-             KeyUp="UserControl_KeyUp"
-             >
+             d:DataContext="{StaticResource symptomVM}"
+>
     <UserControl.Resources>
         <Converters:BoolToCenterAligmentConverter x:Key="BoolToCenterAligmentConverter" />
         <Converters:NegBooleanToVisibilityConverter x:Key="NegBooleanToVisibilityConverter" />
@@ -19,34 +18,44 @@
 
         <sys:Double x:Key="buttonsWidth">20</sys:Double>
     </UserControl.Resources>
+    <UserControl.InputBindings>
+        <KeyBinding Key="Space" Command="{Binding ToggleCommand}" />
+        <KeyBinding Key="Delete" Command="{Binding DeleteCommand}" />
+        <KeyBinding Key="Enter" Command="{Binding CommitCommand}" />
+        <KeyBinding Key="F2" Command="{Binding EditCommand}" />
+        <KeyBinding Key="Escape" Command="{Binding RevertCommand}" />
+        <KeyBinding Key="Insert" Command="{Binding SearchCommand}" />
+        <KeyBinding Key="F" Modifiers="Control" Command="{Binding SearchCommand}" />
 
+        <MouseBinding MouseAction="RightClick" Command="{Binding EditCommand}" />
+    </UserControl.InputBindings>
     <Border BorderThickness="5">
         <Border.Background>
             <RadialGradientBrush>
-                <GradientStop Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}"/>
-                <GradientStop Color="{DynamicResource {x:Static SystemColors.ControlLightColorKey}}" Offset="1"/>
+                <GradientStop Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}" />
+                <GradientStop Color="{DynamicResource {x:Static SystemColors.ControlLightColorKey}}" Offset="1" />
             </RadialGradientBrush>
         </Border.Background>
         <Grid Width="150" Height="80" Focusable="True" x:Name="root">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="20"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="{Binding Mode=OneWay, Source={StaticResource buttonsWidth}}"/>
+                <ColumnDefinition Width="20" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="{Binding Mode=OneWay, Source={StaticResource buttonsWidth}}" />
             </Grid.ColumnDefinitions>
-            
+
             <CheckBox x:Name="checkbox"
                       IsChecked="{Binding IsChecked, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True}"
                       Focusable="False"
                       Visibility="{Binding IsNonCheckable, Converter={StaticResource NegBooleanToVisibilityConverter}}"
-                      VerticalContentAlignment="Center" 
+                      VerticalContentAlignment="Center"
                       Grid.ColumnSpan="3"
  />
             <Button Command="{Binding DataContext.ClickItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ItemsControl}}"
                     CommandParameter="{Binding}"
                     Focusable="False"
-                    Visibility="{Binding IsTerminal, Converter={StaticResource NegBooleanToVisibilityConverter}, Mode=OneWay}" 
+                    Visibility="{Binding IsTerminal, Converter={StaticResource NegBooleanToVisibilityConverter}, Mode=OneWay}"
                     Grid.Column="1"
-                    Grid.ColumnSpan="2"/>
+                    Grid.ColumnSpan="2" />
 
             <TextBlock x:Name="title"
                        Text="{Binding Name}"
@@ -54,7 +63,7 @@
                        HorizontalAlignment="{Binding IsNonCheckable, Converter={StaticResource BoolToCenterAligmentConverter}}"
                        VerticalAlignment="Center"
                        IsHitTestVisible="False"
-                       Padding="5" 
+                       Padding="5"
                        Grid.Column="1"
                        Grid.ColumnSpan="2">
             </TextBlock>
@@ -65,27 +74,26 @@
                        VerticalAlignment="Bottom"
                        IsHitTestVisible="False"
                        Margin="5"
-                       Visibility="{Binding IsTerminal, Converter={StaticResource NegBooleanToVisibilityConverter}, Mode=OneWay}" 
+                       Visibility="{Binding IsTerminal, Converter={StaticResource NegBooleanToVisibilityConverter}, Mode=OneWay}"
                        Grid.Column="2" />
 
             <StackPanel x:Name="editor"
                         LostFocus="editor_LostFocus"
-                        Visibility="Collapsed"
+                        Visibility="{Binding IsEditorActive, Converter={StaticResource BooleanToVisibilityConverter}}"
                         Grid.Column="0"
                         Grid.ColumnSpan="3"
 >
-                
+
                 <StackPanel.Background>
-                    <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.AppWorkspaceColorKey}}"/>
+                    <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.AppWorkspaceColorKey}}" />
                 </StackPanel.Background>
 
                 <TextBox x:Name="titleEditor"
                          Text="{Binding Name, UpdateSourceTrigger=LostFocus}"
- >
+>
                     <TextBox.Margin>
                         <Thickness Right="{StaticResource buttonsWidth}" />
                     </TextBox.Margin>
-                    
                 </TextBox>
                 <CheckBox x:Name="isGroup"
                           IsChecked="{Binding IsNonCheckable}"
@@ -96,30 +104,31 @@
             <controls:FloatSearch x:Name="search"
                         Grid.Column="0"
                         Grid.ColumnSpan="2"
-                        Visibility="Collapsed"
-                        KeyUp="search_KeyUp"
-                                  DataContext="{Binding Search}"
-
- />
+                        Visibility="{Binding DataContext.IsSearchActive, ElementName=root, Converter={StaticResource BooleanToVisibilityConverter}}"
+                        DataContext="{Binding Search}">
+                <controls:FloatSearch.InputBindings>
+                    <KeyBinding Key="Escape" Command="{Binding DataContext.SearchCommand, ElementName=root}"></KeyBinding>
+                </controls:FloatSearch.InputBindings>
+            </controls:FloatSearch>
 
             <StackPanel x:Name="buttons"
                         Grid.Column="2">
-                <Button x:Name="toggleEdit" 
-                        Click="toggleEdit_Click"
+                <Button x:Name="toggleEdit"
+                        Command="{Binding EditCommand}"
                         Height="20"
-                        >
+>
                     e
                 </Button>
-                <Button x:Name="toggleSearch" 
-                        Click="toggleSearch_Click"
+                <Button x:Name="toggleSearch"
+                        Command="{Binding SearchCommand}"
                         Height="20"
-                        >
+>
                     +
                 </Button>
-                <Button x:Name="delete" 
-                        Click="delete_Click"
+                <Button x:Name="delete"
+                        Command="{Binding DeleteCommand}"
                         Height="20"
-                        >
+>
                     x
                 </Button>
             </StackPanel>
