--- a/Diagnosis/Controls/Directory/TilesViewer.xaml
+++ b/Diagnosis/Controls/Directory/TilesViewer.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Diagnosis.Controls.TileView"
+﻿<UserControl x:Class="Diagnosis.Controls.TilesViewer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,7 +6,7 @@
              xmlns:controls="clr-namespace:Diagnosis.Controls"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
-             d:DataContext="{StaticResource symptomExplorerVM}">
+             >
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
