--- a/Diagnosis/Screens/Card.xaml
+++ b/Diagnosis/Screens/Card.xaml
@@ -56,7 +56,7 @@
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
 
-            <TextBlock FontSize="24">Карточка пациента</TextBlock>
+            <TextBlock Style="{StaticResource ScreenTitle}">Карточка пациента</TextBlock>
             <StackPanel Grid.Column="1">
                 <TextBlock Text="{Binding ShortName}" />
                 <TextBlock>
