--- a/Diagnosis/MainWindow.xaml
+++ b/Diagnosis/MainWindow.xaml
@@ -48,7 +48,8 @@
                          Grid.Column="1"
                          Margin="10" />
 
-            <Expander ExpandDirection="Right"
+            <Expander IsExpanded="{Binding IsPatientsVisible}"
+                      ExpandDirection="Right"
 			          RenderTransformOrigin="0.5,0.5"
 			          HorizontalAlignment="Left">
                 <Expander.Header>
