add PropertySelectedValueChanged event, subcribed only current PatientVM. PropertyVM is EditableBase

--- a/Diagnosis/Controls/Forms/PropertiesChooser.xaml
+++ b/Diagnosis/Controls/Forms/PropertiesChooser.xaml
@@ -17,7 +17,7 @@
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <DockPanel Margin="0,5">
-                        <TextBlock Text="{Binding Title}" Style="{StaticResource label}"/>
+                        <TextBlock Text="{Binding Name}" Style="{StaticResource label}"/>
                         <ComboBox ItemsSource="{Binding Values}"
                                   SelectedItem="{Binding SelectedValue}">
                             <ComboBox.ItemTemplate>
