--- a/Diagnosis/MainWindow.xaml
+++ b/Diagnosis/MainWindow.xaml
@@ -24,7 +24,7 @@
         </Grid.ColumnDefinitions>
 
         <Grid x:Name="header">
-            <TextBlock Text="{Binding LoginVM.SelectedDoctor.ShortName}"
+            <TextBlock Text="{Binding LoginVM.DoctorsManager.CurrentDoctor.ShortName}"
 				Margin="5,0"
 				HorizontalAlignment="Left" />
 
@@ -66,7 +66,7 @@
             </Expander>
         </Grid>
 
-        <screen:Login
+        <screen:Login x:Name="login"
 			    DataContext="{Binding LoginVM}"
 			    Visibility="{Binding DataContext.IsLoginActive, Converter={StaticResource BooleanToVisibilityConverter}, ElementName=root}"
                 Grid.RowSpan="2"
