--- a/Diagnosis/Controls/Card/Course.xaml
+++ b/Diagnosis/Controls/Card/Course.xaml
@@ -4,7 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300" 
+             Focusable="True" 
+             IsTabStop="True">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -15,7 +17,8 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Expander Grid.RowSpan="2"
-                  IsExpanded="{Binding IsAppointmentsVisible}"/>
+                  IsExpanded="{Binding IsAppointmentsVisible}" 
+                  Focusable="False"/>
         <StackPanel Grid.Column="1">
             <TextBlock Text="{Binding Name}"/>
             <TextBlock>
@@ -25,21 +28,22 @@
             <TextBlock Text="{Binding LeadDoctor.ShortName}"/>
             <Button Command="{Binding AddAppointmentCommand}">Добавить осмотр</Button>
         </StackPanel>
-        <ItemsControl x:Name="appointments"
-                      ItemsSource="{Binding Appointments}"
-                      Visibility="{Binding IsAppointmentsVisible, Converter={StaticResource BooleanToVisibilityConverter}}" 
-                      Grid.Column="1" 
-                      Grid.Row="1">
-            <ItemsControl.ItemTemplate>
+        <ListView x:Name="appointments"
+                  ItemsSource="{Binding Appointments}"
+                  SelectedItem="{Binding SelectedAppointment}"
+                  Visibility="{Binding IsAppointmentsVisible, Converter={StaticResource BooleanToVisibilityConverter}}" 
+                  Grid.Column="1" 
+                  Grid.Row="1">
+            <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
                         <DockPanel>
-                            <TextBlock Text="{Binding DateTime}"/>
+                            <TextBlock Text="{Binding DateTime, StringFormat='{}{0:d}'}"/>
                             <TextBlock Text="{Binding Doctor.ShortName}"
                                        HorizontalAlignment="Right"/>
                         </DockPanel>
-                        <ItemsControl x:Name="symptoms"
-                                      ItemsSource="{Binding Symptoms}">
+                        <ItemsControl 
+                                      ItemsSource="{Binding HealthRecords}">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
                                     <TextBlock Text="{Binding Name}" />
@@ -48,7 +52,7 @@
                         </ItemsControl>
                     </StackPanel>
                 </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </UserControl>
