rename Diagnosis.App namespaces

--- a/Diagnosis.App/Controls/Directory/FullTree.xaml
+++ b/Diagnosis.App/Controls/Directory/FullTree.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Diagnosis.Controls.FullTree"
+﻿<UserControl x:Class="Diagnosis.App.Controls.FullTree"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:controls="clr-namespace:Diagnosis.Controls"
-             xmlns:conv="clr-namespace:Diagnosis.Converters"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:conv="clr-namespace:Diagnosis.App.Converters"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
