--- a/Diagnosis.App/Controls/Directory/TreeItem.xaml
+++ b/Diagnosis.App/Controls/Directory/TreeItem.xaml
@@ -2,10 +2,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:controls="clr-namespace:Diagnosis.Controls"
-             xmlns:Converters="clr-namespace:Diagnosis.Converters"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:Converters="clr-namespace:Diagnosis.App.Converters"
              x:Name="treeItem"
-             x:Class="Diagnosis.Controls.TreeItem"
+             x:Class="Diagnosis.App.Controls.TreeItem"
              mc:Ignorable="d"
              d:DesignHeight="20" d:DesignWidth="300"
 >
