--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="Diagnosis.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:vm="clr-namespace:Diagnosis.ViewModels"
-             xmlns:conv="clr-namespace:Diagnosis.Converters"
+             xmlns:vm="clr-namespace:Diagnosis.App.ViewModels"
+             xmlns:conv="clr-namespace:Diagnosis.App.Converters"
              
              StartupUri="MainWindow.xaml">
     <Application.Resources>
