--- a/Diagnosis.App/Controls/AutoComplete.xaml
+++ b/Diagnosis.App/Controls/AutoComplete.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Diagnosis.Controls.AutoComplete"
+﻿<UserControl x:Class="Diagnosis.App.Controls.AutoComplete"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:xwt="http://schemas.xceed.com/wpf/xaml/toolkit"
-             xmlns:vm="clr-namespace:Diagnosis.ViewModels"
-             xmlns:controls="clr-namespace:Diagnosis.Controls"
+             xmlns:vm="clr-namespace:Diagnosis.App.ViewModels"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300" d:DataContext="{DynamicResource vm}">
     <UserControl.Resources>
