--- a/Diagnosis.App/Controls/Card/Appointment.xaml
+++ b/Diagnosis.App/Controls/Card/Appointment.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Diagnosis.Controls.Card.Appointment"
+﻿<UserControl x:Class="Diagnosis.App.Controls.Card.Appointment"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:card="clr-namespace:Diagnosis.Controls.Card"
+             xmlns:card="clr-namespace:Diagnosis.App.Controls.Card"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              x:Name="appointment">
