--- a/Diagnosis.App/Controls/Card/Course.xaml
+++ b/Diagnosis.App/Controls/Card/Course.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Diagnosis.Controls.Card.Course"
+﻿<UserControl x:Class="Diagnosis.App.Controls.Card.Course"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
