--- a/Diagnosis.App/Controls/Card/HealthRecord.xaml
+++ b/Diagnosis.App/Controls/Card/HealthRecord.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Diagnosis.Controls.Card.HealthRecord"
+﻿<UserControl x:Class="Diagnosis.App.Controls.Card.HealthRecord"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:constols="clr-namespace:Diagnosis.Controls"
+             xmlns:constols="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300" 
              Focusable="True" 
