--- a/Diagnosis.App/Controls/Directory/TileItem.xaml
+++ b/Diagnosis.App/Controls/Directory/TileItem.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Diagnosis.Controls.TileItem"
+﻿<UserControl x:Class="Diagnosis.App.Controls.TileItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:controls="clr-namespace:Diagnosis.Controls"
-             xmlns:Converters="clr-namespace:Diagnosis.Converters"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:Converters="clr-namespace:Diagnosis.App.Converters"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
