--- a/Diagnosis.App/Controls/FloatSearch.xaml
+++ b/Diagnosis.App/Controls/FloatSearch.xaml
@@ -2,9 +2,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:Converters="clr-namespace:Diagnosis.Converters"
-             xmlns:controls="clr-namespace:Diagnosis.Controls"
-             x:Class="Diagnosis.Controls.FloatSearch"
+             xmlns:Converters="clr-namespace:Diagnosis.App.Converters"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             x:Class="Diagnosis.App.Controls.FloatSearch"
              mc:Ignorable="d"
              d:DesignHeight="100" d:DesignWidth="300"
              x:Name="floatSearch"
