--- a/Diagnosis.App/Controls/Forms/AgePicker.xaml
+++ b/Diagnosis.App/Controls/Forms/AgePicker.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Diagnosis.Controls.AgePicker"
+﻿<UserControl x:Class="Diagnosis.App.Controls.AgePicker"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:controls="clr-namespace:Diagnosis.Controls"
-             xmlns:conv="clr-namespace:Diagnosis.Converters"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:conv="clr-namespace:Diagnosis.App.Converters"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d"
              d:DesignHeight="30" d:DesignWidth="300">
