--- a/Diagnosis.App/Controls/Forms/ComboBoxDatePicker.xaml
+++ b/Diagnosis.App/Controls/Forms/ComboBoxDatePicker.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:Converters="clr-namespace:Diagnosis.Converters" 
-             x:Class="Diagnosis.Controls.ComboBoxDatePicker"
+             xmlns:Converters="clr-namespace:Diagnosis.App.Converters" 
+             x:Class="Diagnosis.App.Controls.ComboBoxDatePicker"
              mc:Ignorable="d"
              d:DesignHeight="30" d:DesignWidth="300"
              x:Name="root">
