--- a/Diagnosis.App/Controls/Forms/SexChooser.xaml
+++ b/Diagnosis.App/Controls/Forms/SexChooser.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:Converters="clr-namespace:Diagnosis.Converters" x:Class="Diagnosis.Controls.SexChooser"
+             xmlns:Converters="clr-namespace:Diagnosis.App.Converters" x:Class="Diagnosis.App.Controls.SexChooser"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
