--- a/Diagnosis.App/Screens/Card.xaml
+++ b/Diagnosis.App/Screens/Card.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="Diagnosis.Screens.Card"
+﻿<UserControl x:Class="Diagnosis.App.Screens.Card"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:controls="clr-namespace:Diagnosis.Controls"
-             xmlns:card="clr-namespace:Diagnosis.Controls.Card"
-             xmlns:screen="clr-namespace:Diagnosis.Screens"
-             xmlns:conv="clr-namespace:Diagnosis.Converters"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:card="clr-namespace:Diagnosis.App.Controls.Card"
+             xmlns:screen="clr-namespace:Diagnosis.App.Screens"
+             xmlns:conv="clr-namespace:Diagnosis.App.Converters"
              mc:Ignorable="d"
              d:DesignHeight="400" d:DesignWidth="600">
     <UserControl.Resources>
