--- a/Diagnosis.App/Styles/TreeStyle.xaml
+++ b/Diagnosis.App/Styles/TreeStyle.xaml
@@ -1,8 +1,8 @@
-﻿<ResourceDictionary x:Class="Diagnosis.Styles.TreeStyle"
+﻿<ResourceDictionary x:Class="Diagnosis.App.Styles.TreeStyle"
                     x:ClassModifier="public"
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:conv="clr-namespace:Diagnosis.Converters">
+                    xmlns:conv="clr-namespace:Diagnosis.App.Converters">
 
     <SolidColorBrush x:Key="GlyphBrush" Color="#444" />
     <SolidColorBrush x:Key="itemSelectedBrush" Color="#FFFF8A16" />
